--- a/www/composer.json
+++ b/www/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "composer/installers": "^2.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
         "drupal/core-composer-scaffold": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
@@ -92,5 +93,10 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
+    },
+    "require-dev": {
+        "drupal/coder": "^8.3",
+        "phpunit/phpunit": "^10.0",
+        "squizlabs/php_codesniffer": "^3.7"
     }
 }
