--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - mysql
     volumes:
       #- ./www/:/var/www/:rw
-      - C:/projects/cicd/drupal-jenkins-aws/www:/var/www
+      - C:/projects/cicd/drupal-jenkins-aws/www:/var/www/:rw
 #      - ./config/vhosts:/etc/apache2/sites-enabled
     environment:
       APACHE_DOCUMENT_ROOT: /var/www/web
