--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,7 @@ services:
     links:
       - mysql
     volumes:
-      #- ./www/:/var/www/:rw
-      - C:/projects/cicd/drupal-jenkins-aws/www:/var/www/:rw
+      - ${REPO_ROOT-.}/www/:/var/www/:rw
 #      - ./config/vhosts:/etc/apache2/sites-enabled
     environment:
       APACHE_DOCUMENT_ROOT: /var/www/web
