--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
     links:
       - mysql
     volumes:
-      - ${REPO_ROOT-.}/www/:/var/www/:rw
+     # - ${REPO_ROOT-.}/www/:/var/www/:rw
+      - /var/jenkins_home/workspace/project-drupal@2/www/:/var/www/:rw
 #      - ./config/vhosts:/etc/apache2/sites-enabled
     environment:
       APACHE_DOCUMENT_ROOT: /var/www/web
