--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
     environment:
       APACHE_DOCUMENT_ROOT: /var/www/web
       XDEBUG_CONFIG: "remote_host=host.docker.internal remote_port=9003"
+      COMPOSER_PROCESS_TIMEOUT: 200
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
