--- a/www/composer.json
+++ b/www/composer.json
@@ -95,6 +95,7 @@
         }
     },
     "require-dev": {
+        "behat/behat": "^3.12",
         "drupal/coder": "^8.3",
         "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "^3.7"
