--- a/www/composer.json
+++ b/www/composer.json
@@ -18,6 +18,7 @@
         "composer/installers": "^2.0",
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
         "drupal/core-composer-scaffold": "^10.0",
+        "drupal/core-dev": "^10.0",
         "drupal/core-project-message": "^10.0",
         "drupal/core-recommended": "^10.0",
         "drush/drush": "^11.5"
@@ -97,7 +98,6 @@
     "require-dev": {
         "behat/behat": "^3.12",
         "drupal/coder": "^8.3",
-        "phpunit/phpunit": "^10.0",
         "squizlabs/php_codesniffer": "^3.7"
     }
 }
