--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
 
   webserver:
     build:
-        context: ./
+      context: ./
+    image: angela1g/drupal-project:latest
     restart: "always"
     ports:
       - "8000:80"
