--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   webserver:
     build:
       context: ./
-    image: angela1g/drupal-project:latest
+#    image: angela1g/drupal-project:latest
     restart: "always"
     ports:
       - "8000:80"
